refactor - swagger arrumado
