# src/models/Carrinho.js
@@ -1,0 +1,16 @@
+const mongoose = require('mongoose');
+
+const CarrinhoSchema = new mongoose.Schema({
+  xisId: {
+    type: String,
+    require: true,
+  },
+  quantidade: {
+    type: Number,
+    require: true,
+  },
+});
+
+const Carrinho = mongoose.model('carrinho', CarrinhoSchema);
+
+module.exports = Carrinho;
